--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.86"
 indexmap = {version = "2.2.6", features = ["std", "serde"]}
+paste = "1.0.15"
 pokeemerald-binds = {path = "./pokeemerald-binds"}
 serde = {version = "1.0.203", features = ["std", "serde_derive"]}
 serde_json = "1.0.117"
